<resources>
    <string name="app_name" translatable="false">Quản Lý Chi Tiêu</string>
    <string name="title_activity_main_drawer" translatable="false">Main Drawer Activity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">User Name</string>
    <string name="nav_header_subtitle" translatable="false">example@email.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_main" translatable="false">Main Activity</string>
    <string name="title_activity_transaction_tab" translatable="false">Transaction Tab Activity</string>
    <string name="select_category_name">Chọn Nhóm</string>
    <string name="add_transaction_name">Thêm Giao Dịch</string>
    <string name="login_name">Đăng nhập</string>
    <string name="register_name">Đăng ký</string>
    <string name="name_wallet">Tên ví</string>
    <string name="name_currency" translatable="false">Chọn đơn vị tiền tệ</string>
    <string name="current_amount">Số dư hiện tại</string>
    <string name="group">Nhóm</string>
    <string name="standard_group">Nhóm tiêu chuẩn</string>
    <string name="service_link">Liên kết dịch vụ</string>
    <string name="connect_the_service_right_in_moneytracher">Kết nối  ngay với dịch vụ trong MoneyTracher</string>
    <string name="not_total">Không tích vào tổng</string>
    <string name="ignore_this_wallet_and_the_balance_from_the_total">Bỏ qua ví khỏi Tổng </string>
    <string name="add_wallet">Thêm ví</string>
    <string name="save">Lưu</string>
    <string name="back">Quay lại</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="to_reset_password">Để đặt lại mật khẩu, vui lòng nhập email đã đăng ký tài khoản và nhấn vào nút Đặt lại mật khẩu, Sau đó truy cập vào email và làm theo hướng dẫn</string>
    <string name="enter_your_email">Nhập email</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="name_account">Tên tài khoản </string>
    <string name="change_language">Thay đổi ngôn ngữ</string>
    <string name="signout">Đăng xuất</string>
    <string name="signin_account">Đăng nhập tài khoản</string>
    <string name="signin">Đăng nhập</string>
    <string name="not_account_signup_now">Chưa có tài khoản. Đăng ký ngay!</string>
    <string name="signup_account">Đăng ký tài khoản</string>
    <string name="user_name">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="signup">Đăng ký</string>
    <string name="account_exist_signin_now">Đã có tài khoản. Đăng nhập ngay!</string>
    <string name="transaction_ledger">Sổ giao dịch</string>
    <string name="report">Báo cáo</string>
    <string name="scheduling">Lập kế hoạch</string>
    <string name="search">Tìm kiếm</string>
    <string name="communicate">Giao tiếp</string>
    <string name="share">Chia sẻ</string>
    <string name="send">Gửi</string>
    <string name="change_language_title">Ngôn ngữ</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_japanese" translatable="false">日本の</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="language_english_code" translatable="false">en</string>
    <string name="language_japanese_code" translatable="false">ja</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="income_category_title">Khoản thu</string>
    <string name="expense_category_title">Khoản chi</string>
    <string name="debt_loan_category_title">Nợ/Cho vay</string>
    <string name="chovay_trano">Cho vay/Trả nợ</string>
    <string name="divay_thuno">Đi vay/Thu nợ</string>
    <string name="all_transaction">Tất cả giao dịch</string>
    <string name="all_time">Tất cả thời gian</string>
    <string name="today">Hôm nay</string>
    <string name="last7days">7 ngày trước</string>
    <string name="last15days">2 tuần trước</string>
    <string name="last30days">Last 30 Days</string>
    <string name="last_month">Tháng trước</string>
    <string name="last3months">3 tháng trước</string>
    <string name="last6months">6 tháng trước</string>
    <string name="current_month">Tháng này</string>
    <string name="last_year">Năm trước</string>
    <string name="current_year">Năm nay</string>
    <string name="future_transactions">Tương lai</string>
    <string name="loading">Loading...</string>
    <string name="so_du_dau">Tiền vào</string>
    <string name="so_du_cuoi">Tiền ra</string>
    <string name="view_statistic">Xem báo cáo cho giai đoạn này</string>
    <string name="init_zero">0</string>
    <string name="choose_category">Chọn nhóm của bạn</string>
    <string name="write_note">Ghi chú</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="transaction_detail">Chi tiết hóa đơn</string>
    <string name="no_write_note">Không có ghi chú</string>
    <string name="select_date">Chọn ngày</string>
    <string name="select_date_start">Ngày bắt đầu</string>
    <string name="select_date_end">Ngày kết thúc</string>
    <string name="no_transaction">Không có giao dịch</string>
    <string name="search_by_date">Tìm kiếm theo ngày</string>
    <string name="search_by_time">Tìm kiếm theo thời gian</string>
    <string name="search_by_items">Tìm kiếm theo khoản mục</string>
    <string name="budget">Ngân sách</string>
    <string name="periodic_transaction">Giao dịch định kỳ</string>
    <string name="remain">Còn lại</string>
    <string name="goal">Số tiền</string>
    <string name="create_budget_time_range">Khoảng thời gian</string>
    <string name="select_wallet">Chọn ví</string>
    <string name="budget_repeat">Lặp lại ngân sách này</string>
    <string name="budget_detail_recommended_daily_spending">Nên chi hàng ngày</string>
    <string name="budget_detail_projected_spending">Dự kiến chi tiêu</string>
    <string name="budget_detail_actual_daily_spending">Thực tế chi tiêu hàng ngày</string>
    <string name="notification_budget_turn_off">Tắt thông báo</string>
    <string name="notification_budget_turn_on">Bật thông báo</string>
    <string name="budget_detail_list_transactions_title">Danh Sách Giao Dịch</string>
    <string name="budget_spent">Đã chi</string>
    <string name="transaction_detail_cashback_left">Còn lại</string>
    <string name="transaction_detail_cashback_over">Bội chi</string>
    <string name="from">Ngày bắt đầu</string>
    <string name="to">Ngày kết thúc</string>
    <string name="start" translatable="false">Start</string>
    <string name="end" translatable="false">End</string>
    <string name="thismonth">Tháng này</string>
    <string name="thisquarter">Quý này</string>
    <string name="thisweek">Tuần này</string>
    <string name="thisyear">Năm nay</string>
    <string name="time">Thời lượng</string>
    <string name="time_empty">Chọn khoảng thời gian</string>
    <string name="time_from">Khoảng thời gian</string>
    <string name="time_mode_interest">Loại thời gian</string>
    <string name="next_month">Tháng sau</string>
    <string name="next_web">Tiếp</string>
    <string name="nextmonth">Tháng tới</string>
    <string name="nextquarter">Quý tới</string>
    <string name="nextweek">Tuần tới</string>
    <string name="nextyear">Năm tới</string>
    <string name="add_budget">Thêm Ngân Sách</string>
    <string name="remain_prefix">Còn</string>
    <string name="day">ngày</string>
    <string name="month">tháng</string>
    <string name="year">năm</string>
    <string name="finnished">Đã kết thúc</string>
    <string name="notification_budget_overspending">Chi vượt mức</string>
    <string name="in">Trong</string>
    <string name="ContentDescriptionImageNull" translatable="false">image null</string>
    <string name="NoImage" translatable="false">Imgage</string>
    <string name="Cancel" translatable="false">thoát</string>
    <string name="edit_transaction_mark_remove_message">remove message</string>
    <string name="sync">Đồng bộ</string>
    <string name="edit_transaction">Sửa giao dịch</string>
    <string name="sync_in_progress">Đang đồng bộ</string>
    <string name="try_again">Thử lại</string>
    <string name="forgor_password_name">Quên mật khẩu</string>
    <string name="edit_wallet">Sửa ví</string>
    <string name="hint_username">Nhập tên người dùng</string>
    <string name="hint_password">Nhập password</string>
    <string name="wallets">Ví của tôi</string>
    <string name="event">Sự kiện</string>
    <string name="email">Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="saving_add_name_title">Nhập tên sự kiện</string>
    <string name="saving_ending_date">Ngày hết hạn</string>
    <string name="add_account_currency_title">Chọn đơn vị tiền tệ</string>
    <string name="select_category_icon">Chọn biểu tượng</string>
    <string name="create_event">Tạo sự kiện</string>
    <string name="event_menu_mark_as_finished">Đánh dấu hoàn tất</string>
    <string name="event_menu_mark_not_finished">Đánh dấu chưa hoàn tất</string>
    <string name="basic_wallet">Ví cơ bản</string>
    <string name="caption_basic_wallet" translatable="false">Ví mà bạn tự nhập giao dịch của bạn</string>
    <string name="goal_wallet">Ví tiết kiệm</string>
    <string name="caption_goal_wallet" translatable="false">Ví mà bạn có thể tự nhập các khoản tiết kiệm của bạn</string>
    <string name="caption_linked_wallet" translatable="false">Ví tự động đồng bộ giao dịch từ ngân hàng và các dịch vụ khác</string>
    <string name="linker_wallet">Ví liên kết</string>
    <string name="choose_wallet_type">Chọn loại ví</string>
    <string name="init_balance">Số dư khởi tạo</string>
    <string name="detail_wallet">Thông tin ví</string>
    <string name="select_wallet_type">Chọn loại ví</string>
    <string name="event_detail">Thông tin sự kiện</string>
    <string name="select_event">Chọn sự kiện</string>
    <string name="pay_book">Sổ nợ</string>
    <string name="tendency">Xu hướng</string>
    <string name="feature_developing">Tính năng đang phát triển</string>
    <string name="over_view_month">Chi tiết tháng</string>
    <string name="select_location">Chọn địa điểm</string>
    <string name="over_view">Báo cáo chi tiết</string>
    <string name="notify" />
    <string name="show_as_wallet">Hiển thị với ví</string>
    <string name="all_wallet">Tất cả ví</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="language_names">
        <item>@string/language_vietnamese</item>
        <item>@string/language_english</item>
    </string-array>
    <string-array name="language_codes">
        <item>@string/language_vietnamese_code</item>
        <item>@string/language_english_code</item>
    </string-array>
    <string-array name="search_array">
        <item>Tìm kiếm theo ngày</item>
        <item>Tìm kiếm theo thời gian</item>
    </string-array>
</resources>