<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_transaction"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/notify"
        android:icon="@drawable/ic_notifications_white"
        app:showAsAction="ifRoom"
        android:title="@string/notify">
    </item>
</menu>
