<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="main"
            type="com.minhtzy.moneytracker.setting.Setting"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            >

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                >

                <TextView
                    android:id="@+id/textview09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_settings"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="107dp"
            android:layout_height="86dp"
            android:src="@drawable/logo"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"

         />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_account"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="#ff0000"/>
        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/change_language"
            android:onClick="@{ () -> main.openLanguageScreen() }"

            android:textAllCaps="false"
            android:background="@null"
            android:layout_gravity="center"
            android:textSize="20dp"

        />

        <!--<Spinner-->
        <!--android:id="@+id/spinnerChangeLanguage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />-->

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="15dp"
            android:text="@string/signout"
            android:textAllCaps="false"
            android:textColor="#ff0000"
            android:textSize="20dp"
            android:layout_gravity="center"
        />

        <Button
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/back"
            android:textAllCaps="false"
            android:background="@null"

            android:layout_gravity="center"
            />
    </LinearLayout>
</layout>
