<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.wallet.EditWalletActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/popup_menu_item_text_margin_left">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Line"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundItem"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/wallet_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                app:srcCompat="@drawable/wallett" />

            <EditText
                android:id="@+id/txtTen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_wallet"
                android:inputType="textPersonName"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Line"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundItem"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/currency_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:src="@drawable/ic_currency" />

            <TextView
                android:id="@+id/text_currency_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_medium"
                android:text="@string/name_currency"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Line"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundItem"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/icon_bar_size"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_amount" />

                <com.minhtzy.moneytracker.view.CurrencyEditText
                    android:id="@+id/txtSotien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/Line"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"/>

    </LinearLayout>
</LinearLayout>